# noob-note-old

./: .eslintrc.cjs  .prettierrc  .taurignore  components.json  docker-compose.yaml  dockerfile  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
api/: classrooms.ts  cycles.ts  index.ts
components/app/: header.vue  icon.vue
components/classroom/: form.vue
components/header/: link.vue
components/ui/accordion/: Accordion.vue  AccordionContent.vue  AccordionItem.vue  AccordionTrigger.vue
components/ui/alert/: Alert.vue  AlertDescription.vue  AlertTitle.vue  index.ts
components/ui/alert-dialog/: AlertDialog.vue  AlertDialogAction.vue  AlertDialogCancel.vue  AlertDialogContent.vue  AlertDialogDescription.vue  AlertDialogTitle.vue  AlertDialogTrigger.vue
components/ui/badge/: Badge.vue  index.ts
components/ui/button/: Button.vue  index.ts
components/ui/calendar/: Calendar.vue  index.ts
components/ui/carousel/: Carousel.vue  interface.ts  (+5 more)
composables/: form.ts
docker/: start
layouts/: default.vue
pages/: index.vue
pages/classes/: index.vue
pages/classrooms/: create.vue
pages/periods/: index.vue
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/db/migrations/: 000_cycles.sql  001_subjects.sql  002_grades.sql  003_terms.sql  004_classes.sql  004_classrooms.sql  005_students.sql  006_tests.sql  007_test_results.sql
src-tauri/src/: actions.rs  main.rs
stores/: classroom.ts  cycle.ts  grade.ts
types/: Classroom.ts  Cycle.ts  Grade.ts  Student.ts  Subject.ts  Term.ts  Test.ts  TestResult.ts  index.ts
(+86 files in other folders)
